style: fix hover color on segment button in dark mode

--- a/src/theme/segment.scss
+++ b/src/theme/segment.scss
@@ -4,6 +4,7 @@ body.dark {
       > ion-segment-button {
         color: rgba(255, 255, 255, 0.4);
         --indicator-color: white;
+        --color-hover: white;
 
         &.segment-button-checked {
           color: var(--ion-text-color);
